<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:onClick="rootLayoutTap"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/imgBrandIcon"
        android:layout_width="149dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/whatsapp"
        tools:ignore="ContentDescription"/>

    <EditText
        android:id="@+id/textEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="#B6B0B0"
        android:fontFamily="@font/amita"
        android:hint="@string/textEmail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="24dp"
        android:paddingVertical="8dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBrandIcon"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/textUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="#B6B0B0"
        android:fontFamily="@font/amita"
        android:hint="@string/textUsername"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmail"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/textPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="#B6B0B0"
        android:fontFamily="@font/amita"
        android:hint="@string/textPassword"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUsername" tools:targetApi="o"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnSignUpUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/amita"
        android:padding="10dp"
        android:text="@string/btnSignUpUser"
        android:background="#37C233"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPassword" />

    <Button
        android:id="@+id/btnLogInUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/amita"
        android:padding="10dp"
        android:text="@string/btnLogInUser"
        android:background="#37C233"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUpUser" />

</androidx.constraintlayout.widget.ConstraintLayout>